Delete font-azo in indonesian page

--- a/in/business.html
+++ b/in/business.html
@@ -33,7 +33,7 @@
     <div class="page page-scroll page-in" id="page-business">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Make the world more creative</span>
                 <h3>Business Portfolio</h3>
@@ -61,7 +61,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img02.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Mobility<br />Technology</h3>
+                        <h3>Mobility<br />Technology</h3>
                         <span>01</span>
                         <p>
                             Melalui platform transportasi terintegrasi cerdas, kami mengumpulkan <i>Big Data</i> dari pelacakan lokasi <i>real-time</i>, pengendalian lalu lintas, kendaraan, dan perhitungan jarak serta biaya. Solusi kami dapat memprediksi permintaan, mengelola risiko, dan merespons dengan menggunakan <i>Big Data</i>.
@@ -71,12 +71,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img03.png" />
                                 <div>
-                                    <em class="font-azo"><span>01</span>Mobility Technology</em>
+                                    <em><span>01</span>Mobility Technology</em>
                                     <h5>Pengembangan ITS<br />(Intelligent Transport System)</h5>
                                     <span>
                                         Dengan berbagai teknologi dan pengetahuan yang kami akumulasikan, kami merencanakan, mendesain, dan mengembangkan platform transportasi. Hal ini bertujuan untuk meningkatkan efisiensi dan stabilitas sistem transportasi, dengan menerapkan teknologi canggih seperti elektronika, informasi, dan komunikasi.
@@ -125,7 +125,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img29.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Ticketing System<br /> and Reservation</h3>
+                        <h3>Ticketing System<br /> and Reservation</h3>
                         <span>02</span>
                         <p>
                             Produk dan layanan unggulan kami lainnya adalah sistem pemesanan dan penjualan tiket. Melalui solusi ini, kami menyediakan pengalaman pemesanan yang efisien dan handal bagi pelanggan. Dengan teknologi modern, layanan tiket kami memberikan kemudahan dalam merencanakan perjalanan serta menawarkan fleksibilitas dalam pembelian tiket secara aman dan nyaman.
@@ -136,12 +136,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img07.jpg" />
                                 <div>
-                                    <em class="font-azo"><span>02</span>Ticketing System and Reservation</em>
+                                    <em><span>02</span>Ticketing System and Reservation</em>
                                     <h5>Laporan & statistik memberi Anda analitik bisnis penting terkini</h5>
                                     <span>
                                         Laporan dan statistik menyediakan informasi analitik bisnis terbaru yang penting bagi Anda. Dengan menggunakan data ini, Anda dapat memahami dengan lebih baik kinerja bisnis Anda dan membuat keputusan yang lebih tepat secara strategis.
@@ -182,7 +182,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img10.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Payment <br />System</h3>
+                        <h3>Payment <br />System</h3>
                         <span>03</span>
                         <p>
                             Selanjutnya, kami menyediakan berbagai produk dan layanan terkait sistem pembayaran. Produk dan layanan ini dirancang untuk memenuhi kebutuhan pelanggan dalam mengelola transaksi keuangan dengan mudah dan aman. Kami berkomitmen untuk memberikan solusi pembayaran yang efisien dan handal, mendukung keberlanjutan bisnis dan keamanan transaksi keuangan Anda.
@@ -192,12 +192,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img11.png" />
                                 <div>
-                                    <em class="font-azo"><span>03</span>Payment System</em>
+                                    <em><span>03</span>Payment System</em>
                                     <h5>Metode pembayaran yang lengkap</h5>
                                     <span>
                                         Kami menyediakan beragam metode pembayaran yang lengkap untuk memudahkan pelanggan dalam melakukan transaksi. Dengan pilihan metode pembayaran yang beragam, kami berkomitmen memberikan fleksibilitas dan kemudahan bagi pelanggan untuk melakukan pembayaran sesuai dengan preferensi mereka, menjadikan pengalaman bertransaksi lebih nyaman dan efisien.
@@ -266,7 +266,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img16.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">IT Service <br />Management</h3>
+                        <h3>IT Service <br />Management</h3>
                         <span>04</span>
                         <p>
                             Layanan <i>IT Service Management (ITSM)</i> kami mencakup berbagai produk dan layanan yang dirancang untuk membantu organisasi dalam mengelola dan meningkatkan kinerja sistem dan layanan IT mereka. Dengan <i>ITSM</i>, kami menyediakan solusi yang terintegrasi untuk mendukung perencanaan, pelaksanaan, dan pemantauan layanan IT secara efektif. Dengan fokus pada manajemen layanan yang efisien, produk dan layanan kami di bidang <i>ITSM</i> dapat membantu meningkatkan produktivitas, efisiensi, dan keandalan operasional perusahaan Anda.
@@ -276,12 +276,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img17.png" />
                                 <div>
-                                    <em class="font-azo"><span>04</span>IT Service Management</em>
+                                    <em><span>04</span>IT Service Management</em>
                                     <h5>Bisnis manajemen KPI dengan satu sentuhan</h5>
                                     <span>
                                         Layanan kami menyediakan kemudahan dalam manajemen KPI dengan satu sentuhan. Dengan pendekatan ini, bisnis Anda dapat dengan efisien memantau dan mengelola kinerja kunci dengan lebih praktis dan efektif.
@@ -341,7 +341,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img21.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Logistic and <br />Delivery System</h3>
+                        <h3>Logistic and <br />Delivery System</h3>
                         <span>05</span>
                         <p>
                             Sistem logistik dan pengiriman kami telah dirancang dengan solusi yang canggih dan andal, memastikan kelancaran optimal dalam pengelolaan serta pengiriman barang. Dengan fokus pada efisiensi, kami berkomitmen untuk memberikan kepuasan maksimal kepada setiap pelanggan yang mengandalkan layanan kami.
@@ -351,12 +351,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img22.png" />
                                 <div>
-                                    <em class="font-azo"><span>05</span>Logistic and Delivery System</em>
+                                    <em><span>05</span>Logistic and Delivery System</em>
                                     <h5>Memantau dan melacak lokasi kendaraan logistik pada waktu yang sebenarnya</h5>
                                     <span>
                                         Kami melakukan pemantauan dan pelacakan lokasi kendaraan logistik secara <i>real-time</i>. Dengan teknologi terkini, kami memastikan kendali yang akurat dan tepat waktu, sehingga memperkuat efisiensi dalam manajemen pengiriman dan logistik.
@@ -416,7 +416,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img26.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Live Streaming<br /> Platform</h3>
+                        <h3>Live Streaming<br /> Platform</h3>
                         <span>06</span>
                         <p>
                             Layanan unggulan kami berfokus pada platform <i>live streaming</i>. Memadukan teknologi terkini dan pengalaman pengguna yang optimal, kami hadir untuk memberikan pengalaman <i>live streaming</i> yang memukau dan berkualitas tinggi kepada para pengguna kami. Dengan layanan ini, kami berkomitmen untuk memenuhi kebutuhan dan harapan pelanggan, menjadikan pengalaman <i>streaming</i> mereka lebih interaktif dan memuaskan.
@@ -426,12 +426,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img27.png" />
                                 <div>
-                                    <em class="font-azo"><span>06</span>Live Streaming Platform</em>
+                                    <em><span>06</span>Live Streaming Platform</em>
                                     <h5>Konsultasi online melalui <i>website, mobile apps, video call</i></h5>
                                     <span>
                                         Kami menyediakan layanan konsultasi online melalui berbagai platform, termasuk <i>website</i>, aplikasi <i>mobile</i>, dan panggilan video. Memanfaatkan teknologi terkini, kami mempermudah akses konsultasi bagi pelanggan, memungkinkan mereka untuk berinteraksi secara efisien dan mendapatkan bantuan dengan nyaman dari kenyamanan perangkat mereka sendiri.
