--- a/in/ceo.html
+++ b/in/ceo.html
@@ -25,7 +25,7 @@
     <div class="page page-scroll page-in" id="page-ceo">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>The past and the future</span>
                 <h3>CEO Message</h3>
@@ -39,8 +39,6 @@
             <div class="section">
                 <div class="row">
                     <div class="imx">
-
-                        <!-- <h3 class="font-azo">CEO Message</h3> -->
 
                         <div class="inner">
                             <img class="ceo-img" src='../assets/img/headquarters-img02.png' />
