--- a/in/introduction.html
+++ b/in/introduction.html
@@ -39,7 +39,7 @@
     <div class="page page-in" id="page-introduction">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Connect people with technology</span>
                 <h3>Introduction</h3>
@@ -51,18 +51,13 @@
         <div class="about-wrapper">
             <div class="row">
                 <div class="imx">
-                    <h3 class="font-azo"><span>Company Profile</span></h3>
+                    <h3><span>Company Profile</span></h3>
                     <img src='../assets/img/logo_svg.svg' />
                     <P>
                         <b>Networks Indonesia Aku (NIA)</b> adalah perusahaan yang menyediakan layanan, solusi, dan produk digital inovasi teknologi informasi dengan spesialisasi di bidang ITS <i>(Intelligent Transport System)</i>. <b>NIA</b> terbentuk pada 10 Desember 2021 yang merupakan anak perusahaan dari <b>Samchully Networks</b> di Korea Selatan yang berdiri sejak tahun 2014.<br /><br /> Kami menciptakan produk digital yang unggul dan menghadirkan inovasi baru melalui sistem dan teknologi yang kami kembangkan sendiri dari Korea. Dengan mengusung teknologi dan sistem canggih dari Korea, <b>NIA</b> berkomitmen untuk selalu menghadirkan kualitas dalam setiap inovasinya.<br /><br /> <b>NIA</b> berpartisipasi untuk membangun dan memajukan sistem transportasi, UMKM dan perusahaan startup di Indonesia, menciptakan berbagai produk unggulan dan menghadirkan visi baru melalui strategi yang sistematis dengan teknologi yang telah terbukti.
                     </P>
                 </div>
             </div>
-
-            <!--<div class="text-wrapper font-azo">
-                Connecting people and the world through<br />
-                <em>Technology</em>
-            </div>-->
         </div>
         <!-- about-wrapper end -->
 
@@ -72,15 +67,15 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Vision & Mission</h3>
+                    <h3>Vision & Mission</h3>
 
-                    <h4 class="font-azo">Visi NIA :</h4>
+                    <h4>Visi NIA :</h4>
 
                     <p>
                         Menjadikan perusahaan IT terkemuka di Indonesia dengan fokus mengedepankan produk dan layanan jasa yang ramah lingkungan. Menciptakan teknologi untuk kemajuan transportasi dan infrastruktur, teknologi pada bidang kesehatan, pendidikan, logistik, <i>smart factory</i>, <i>online payment system</i>, dan pengembannya.
                     </p>
 
-                    <h4 class="font-azo">Misi NIA :</h4>
+                    <h4>Misi NIA :</h4>
 
                     <ul>
                         <li>
@@ -115,9 +110,9 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Core Value</h3>
+                    <h3>Core Value</h3>
 
-                    <h4 class="font-azo core-value">
+                    <h4 class="core-value">
                         <img src="../assets/img/icon/icon-quotes01.svg" />
                         <span class="letter-c1">C</span>
                         <span class="letter-o">O</span>
@@ -179,7 +174,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Management Philosophy</h3>
+                    <h3>Management Philosophy</h3>
 
                     <div class="block-box">
                         <img src="../assets/img/icon/icon-block01.svg" />
@@ -201,7 +196,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Our History</h3>
+                    <h3>Our History</h3>
 
                     <div class="clear">
                         <span class="fl w15 year">2023</span>
