--- a/in/media.html
+++ b/in/media.html
@@ -25,7 +25,7 @@
     <div class="page page-community" id="page-media">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
