--- a/in/media/media_27.html
+++ b/in/media/media_27.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Dua Terminal Bus di Indonesia akan Dimodernisasi dengan Menerapkan Tujuh Sistem</h3>
+                        <h3>Dua Terminal Bus di Indonesia akan Dimodernisasi dengan Menerapkan Tujuh Sistem</h3>
                         <span>DATE : 2022-11-20</span>
 
                         <img src="../../assets/img/media-detail-img12.jpg" />
