--- a/in/notice/notice_4.html
+++ b/in/notice/notice_4.html
@@ -25,7 +25,7 @@
     <div class="page page-detail page-in" id="page-notice-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Notice</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Pelatihan dan Seminar Sistem Modernisasi Bus Telah Diselenggarakan untuk Petugas Terminal</h3>
+                        <h3>Pelatihan dan Seminar Sistem Modernisasi Bus Telah Diselenggarakan untuk Petugas Terminal</h3>
                         <span>DATE : 2023-02-20</span>
 
                         <p>
