--- a/in/people.html
+++ b/in/people.html
@@ -30,7 +30,7 @@
     <div class="page page-scroll page-in" id="page-people">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Teamwork makes the dreamwork</span>
                 <h3>NIA People</h3>
@@ -40,12 +40,6 @@
 
         <!-- people-wrapper start -->
         <div class='people-wrapper'>
-
-            <div class="row">
-                <div class="imx">
-                    <!-- <h3 class="font-azo">NIA People</h3> -->
-                </div>
-            </div>
             
             <div class="member-box">
                 <div class="row">
@@ -61,9 +55,6 @@
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
-                                <!--<img src="../assets/img/about-img09.png" />
-                                <h4>Mr. Son</h4>
-                                <span class="font-azo">President of Indonesia Branch Office</span>-->
                             </div>
                         </div>
 
