--- a/in/media/media_14.html
+++ b/in/media/media_14.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Terminal Bus Kampung Rambutan Mulai Buka Penjualan Tiket Online</h3>
+                        <h3 >Terminal Bus Kampung Rambutan Mulai Buka Penjualan Tiket Online</h3>
                         <span>DATE : 2023-09-13</span>
 
                         <img src="../../assets/img/media-detail-img14.jpg" />
