--- a/in/media/media_21.html
+++ b/in/media/media_21.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Terminal Kampung Rambutan Terapkan Sistem e-Ticketing</h3>
+                        <h3>Terminal Kampung Rambutan Terapkan Sistem e-Ticketing</h3>
                         <span>DATE : 2023-07-26</span>
 
                         <img src="../../assets/img/media-detail-img13.jpg" />
