--- a/in/media/media_33.html
+++ b/in/media/media_33.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">PT NIA dan Kemenhub Gelar Pelatihan Sistem Modernisasi Terminal</h3>
+                        <h3>PT NIA dan Kemenhub Gelar Pelatihan Sistem Modernisasi Terminal</h3>
                         <span>DATE : 2022-03-10</span>
 
                         <img src="../../assets/img/media-detail-img28.jpg" />
