--- a/in/notice/notice_2.html
+++ b/in/notice/notice_2.html
@@ -25,7 +25,7 @@
     <div class="page page-detail page-in" id="page-notice-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Notice</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Upacara Pembukaan dan Rapat Karyawan Tahun Baru 2023 untuk PT Networks Indonesia Aku Diselenggarakan</h3>
+                        <h3>Upacara Pembukaan dan Rapat Karyawan Tahun Baru 2023 untuk PT Networks Indonesia Aku Diselenggarakan</h3>
                         <span>DATE : 2023-01-20</span>
 
                         <p>
